--- a/FolderCreator_v2/FolderCreator_v2.csproj
+++ b/FolderCreator_v2/FolderCreator_v2.csproj
@@ -51,6 +51,18 @@
     <Compile Include="Classes\FileExtension.cs" />
     <Compile Include="Classes\FilesMethods.cs" />
     <Compile Include="Classes\Lang.cs" />
+    <Compile Include="Forms\frmAbout.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\frmAbout.Designer.cs">
+      <DependentUpon>frmAbout.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\frmExtensionFiles.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\frmExtensionFiles.Designer.cs">
+      <DependentUpon>frmExtensionFiles.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -59,6 +71,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Forms\frmExtensionFiles.resx">
+      <DependentUpon>frmExtensionFiles.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
@@ -87,6 +102,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="my_projects_folder.ico" />
+    <None Include="Resources\iconfinder_Save_1493294.png" />
+    <None Include="Resources\iconfinder_list-add_118777.png" />
     <None Include="Resources\iconfinder_go-bottom_118767.png" />
     <None Include="Resources\iconfinder_folder-saved-search_118905.png" />
   </ItemGroup>
