Beta 01 - Corrections and functionalities
This build corrected some flaws that occurred in the previous build, such as crashing the application.

The Move Files button is now available and functional, it creates folders according to the files listed in the directory, moves the original files into the new folder if authorized, and when available, copies extra files within each folder.

This version can already be used and tested.

--- a/FolderCreator_v2/FolderCreator_v2.csproj
+++ b/FolderCreator_v2/FolderCreator_v2.csproj
@@ -31,7 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>my_projects_folder.ico</ApplicationIcon>
+    <ApplicationIcon>Resources\my_projects_folder.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -114,7 +114,8 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="my_projects_folder.ico" />
+    <Content Include="Resources\my_projects_folder.ico" />
+    <None Include="Resources\iconfinder_go-next_118773.png" />
     <None Include="Resources\iconfinder_Save_1493294.png" />
     <None Include="Resources\iconfinder_list-add_118777.png" />
     <None Include="Resources\iconfinder_go-bottom_118767.png" />
